Smart UV Project crashes Blender 2.91 #83347

Closed
opened 2020-12-03 05:14:18 +01:00 by Mike Adams · 36 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GeForce GTX 1050 Ti

Blender Version
Broken: 2.91.0
Worked: 2.90.1

I am able to unwrap the attached .blend file via Smart UV Project in 2.90.1
The same .blend file crashes 2.91.0, when I attempt to use Smart UV Project to unwrap it.
(I did not create this object. It was sent to me by someone else requesting my help with it.)Blender Locomotive UVunwrap Test.blend

**System Information** Operating system: Windows 10 Graphics card: Nvidia GeForce GTX 1050 Ti **Blender Version** Broken: 2.91.0 Worked: 2.90.1 I am able to unwrap the attached .blend file via Smart UV Project in 2.90.1 The same .blend file crashes 2.91.0, when I attempt to use Smart UV Project to unwrap it. (I did not create this object. It was sent to me by someone else requesting my help with it.)[Blender Locomotive UVunwrap Test.blend](https://archive.blender.org/developer/F9428325/Blender_Locomotive__UVunwrap_Test.blend)
Author

Added subscriber: @mikeadams2k

Added subscriber: @mikeadams2k

#84715 was marked as duplicate of this issue

#84715 was marked as duplicate of this issue

#84540 was marked as duplicate of this issue

#84540 was marked as duplicate of this issue

#83980 was marked as duplicate of this issue

#83980 was marked as duplicate of this issue

#83912 was marked as duplicate of this issue

#83912 was marked as duplicate of this issue

#83758 was marked as duplicate of this issue

#83758 was marked as duplicate of this issue

#83735 was marked as duplicate of this issue

#83735 was marked as duplicate of this issue

#83551 was marked as duplicate of this issue

#83551 was marked as duplicate of this issue

#83443 was marked as duplicate of this issue

#83443 was marked as duplicate of this issue

#83348 was marked as duplicate of this issue

#83348 was marked as duplicate of this issue

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm a crash and the model appears to be valid (checked with bpy.data.objects["A-Unit_body_Cube.335"].data.validate(verbose=True)).

bm_face_array_calc_unique_uv_coords(BMFace ** faces, int faces_len, const uint cd_loop_uv_offset, int * r_coords_len) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/uvedit/uvedit_islands.c:149)
bm_face_array_uv_rotate_fit_aabb(BMFace ** faces, int faces_len, int align_to_axis, const uint cd_loop_uv_offset) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/uvedit/uvedit_islands.c:180)
ED_uvedit_pack_islands_multi(const Scene * scene, Object ** objects, const uint objects_len, const struct UVPackIsland_Params * params) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/uvedit/uvedit_islands.c:415)
smart_project_exec(bContext * C, wmOperator * op) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/uvedit/uvedit_unwrap_ops.c:2168)
wm_operator_exec(bContext * C, wmOperator * op, const _Bool repeat, const _Bool store) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1012)
WM_operator_call_ex(bContext * C, wmOperator * op, const _Bool store) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1064)
dialog_exec_cb(bContext * C, void * arg1, void * arg2) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_operators.c:1363)
ui_apply_but_funcs_after(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_handlers.c:948)
ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_handlers.c:10897)
wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:639)
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2766)
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2874)
wm_event_do_handlers(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3297)
WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:635)
main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522)
I can confirm a crash and the model appears to be valid (checked with `bpy.data.objects["A-Unit_body_Cube.335"].data.validate(verbose=True)`). ```lines bm_face_array_calc_unique_uv_coords(BMFace ** faces, int faces_len, const uint cd_loop_uv_offset, int * r_coords_len) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/uvedit/uvedit_islands.c:149) bm_face_array_uv_rotate_fit_aabb(BMFace ** faces, int faces_len, int align_to_axis, const uint cd_loop_uv_offset) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/uvedit/uvedit_islands.c:180) ED_uvedit_pack_islands_multi(const Scene * scene, Object ** objects, const uint objects_len, const struct UVPackIsland_Params * params) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/uvedit/uvedit_islands.c:415) smart_project_exec(bContext * C, wmOperator * op) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/uvedit/uvedit_unwrap_ops.c:2168) wm_operator_exec(bContext * C, wmOperator * op, const _Bool repeat, const _Bool store) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1012) WM_operator_call_ex(bContext * C, wmOperator * op, const _Bool store) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1064) dialog_exec_cb(bContext * C, void * arg1, void * arg2) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_operators.c:1363) ui_apply_but_funcs_after(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_handlers.c:948) ui_popup_handler(bContext * C, const wmEvent * event, void * userdata) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_handlers.c:10897) wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:639) wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2766) wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2874) wm_event_do_handlers(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3297) WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:635) main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522) ```
Member

Added subscriber: @chippwalters

Added subscriber: @chippwalters
Evan Wilson changed title from Smart UVunwrap crashes Blender 2.91 to Smart UV Project crashes Blender 2.91 2020-12-04 04:12:11 +01:00

Added subscribers: @XDeadshoTX, @rboxman

Added subscribers: @XDeadshoTX, @rboxman

Do you need more test files? It's crashing on my computer a bunch.

Do you need more test files? It's crashing on my computer a bunch.

Added subscriber: @rlneumiller

Added subscriber: @rlneumiller

Fix appear to be a minor change - see D9757.

Fix appear to be a minor change - see [D9757](https://archive.blender.org/developer/D9757).

This issue was referenced by 29b3035a54

This issue was referenced by 29b3035a542c6441512607ae592b333fd5a906d8

This issue was referenced by c2a01a6c11

This issue was referenced by c2a01a6c118ed03fa48aa4f537fe9e5cf711b536

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-12-07 04:21:17 +01:00

Added subscriber: @RaphaelStoeckli

Added subscriber: @RaphaelStoeckli

When will this fix be available in a 2.91 build?

When will this fix be available in a 2.91 build?

Added subscriber: @dorad

Added subscriber: @dorad

Added subscriber: @LautaroIglesias

Added subscriber: @LautaroIglesias

Added subscriber: @JDesigner

Added subscriber: @JDesigner

Added subscriber: @owenmccall7215

Added subscriber: @owenmccall7215

Added subscriber: @Lovely_Bigga

Added subscriber: @Lovely_Bigga

Even I am facing the same problem!

Even I am facing the same problem!

Still waiting on a fix. If this is closed, then when will it be posted to 2.91? Thanks.

Still waiting on a fix. If this is closed, then when will it be posted to 2.91? Thanks.

We will likely do a bugfix release, see #83216 (Potential candidates for corrective releases)

We will likely do a bugfix release, see #83216 (Potential candidates for corrective releases)

Added subscriber: @desertpogona

Added subscriber: @desertpogona

This is also affecting me. It is extremely consistent.

This is also affecting me. It is extremely consistent.

Added subscriber: @BlenderSith

Added subscriber: @BlenderSith

Added subscriber: @daadood1200

Added subscriber: @daadood1200

Added subscriber: @Rawalanche

Added subscriber: @Rawalanche
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83347
No description provided.