Fix T83347: Smart UV project crashes with wire edges

Missing NULL check.
Regression in 9296ba867462f7ff3c55bc0c9129af4121243bed

Ref D9757